--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </style>
 </head>
 <body>
-    <div id="gameArea" style="background-image: url("https://raw.githubusercontent.com/SriRanjani30/Orange-Catching-Game/main/Background.jpg");">
+    <div id="gameArea" style="background-image: url('https://raw.githubusercontent.com/SriRanjani30/Orange-Catching-Game/main/Background.jpg');">
         <div id="score">Score: 0</div>
         <div id="basket" style="background-image: url('C:\\Users\\Agadish\\Documents\\VS Code\\Project 6\\Basket.png');"></div>
         <div id="gameOver">
