--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
     <div id="gameArea" style="background-image: url('https://raw.githubusercontent.com/SriRanjani30/Orange-Catching-Game/main/Background.jpg');">
         <div id="score">Score: 0</div>
-        <div id="basket" style="background-image: url('C:\\Users\\Agadish\\Documents\\VS Code\\Project 6\\Basket.png');"></div>
+        <div id="basket" style="background-image: url('https://raw.githubusercontent.com/SriRanjani30/Orange-Catching-Game/main/Basket.png');"></div>
         <div id="gameOver">
             <h1>Game Over</h1>
             <p>Your score: <span id="finalScore">0</span></p>
@@ -146,7 +146,7 @@
             const object = document.createElement('div');
             object.classList.add('fallingObject');
             object.style.left = Math.random() * (gameWidth - 60) + 'px';
-            object.style.backgroundImage = "url('C://Users//Agadish//Documents//VS Code//Project 6//Orange.png')";
+            object.style.backgroundImage = "url('https://raw.githubusercontent.com/SriRanjani30/Orange-Catching-Game/main/Orange.png')";
             gameArea.appendChild(object);
 
             let fallingSpeed = Math.random() * 3 + 3;
